# HR-Candidate-Evaluation

./: .gitignore  README.md  last_login_migrate.py  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
cache/: position_cache.json  position_clusters.pkl  university_cache.json  university_clusters.pkl
docs/: api.md  architecture.md
scripts/: direct_mysql_postgres_migration.py  final_migration.py  fix_postgres_schema.py  improved_migration.py  mysql_postgres_data_migration.py  optimized_migration.py  process_cloud_data.py  process_cloud_data_no_ai.py  run_api.sh  run_migration.py
scripts/cache/: position_cache.json  position_clusters.pkl  university_cache.json  university_clusters.pkl
scripts/migration/: clustering.py  database.py  standardization.py  utils.py  vectors.py
src/api/: app.py
src/data/: db_connect.py  pg_connect.py  schema.sql
src/model/: __init__.py  scoring.py  scoring_no_ai.py  vector_scoring.py
src/preprocess/: __init__.py  preprocess.py
src/templates/: search.html
src/utils/: config.py  logger.py
test/: claude_test.html
